attempt to resolve white space issue

--- a/bulma_styling/_sass/main.scss
+++ b/bulma_styling/_sass/main.scss
@@ -121,7 +121,7 @@ section {
     background-color: white;
     width: 110%;
     height: 110%;
-    border-radius: 6px;
+    border-radius: 5px;
     z-index: 15;
     box-shadow: 0 0.5em 1em 0.625em rgb(10 10 10 / 10%), 0 0px 0 1px rgb(10 10 10 / 2%);
 }
@@ -143,7 +143,9 @@ body{
     -moz-osx-font-smoothing: grayscale;
     background-color: $primary-invert;
     font-size: 14px;
-    overflow: hidden
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .wrap {
